# mindsight

./: .gitignore  CHANGELOG.md  Makefile  MindSight.py  MindSight_GUI.py  README.md  THIRD_PARTY_LICENSES.md  constants.py  install_dependencies.py  mkdocs.yml  participant_ids.py  pipeline_config.py  pipeline_loader.py  project_runner.py  pyproject.toml  requirements.txt  test_pipeline.yaml  weights.py  weights_manifest.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  release.yml
DataCollection/: __init__.py  chart_output.py  csv_output.py  dashboard_matplotlib.py  dashboard_output.py  data_pipeline.py  global_csv.py  heatmap_output.py
GUI/: MindSight_GUI.py  arg_introspector.py  gaze_tab.py  live_dashboard.py  live_dashboard_bridge.py  main_window.py  phenomena_panel.py  pipeline_dialog.py  plugin_panel.py  project_tab.py  vp_builder_tab.py  widgets.py  workers.py
GUI/gaze_tab/: __init__.py  gaze_backend_section.py  gaze_tab.py  performance_section.py
GUI/project_tab/: participants_section.py  project_tab.py
GazeTracking/: __init__.py  gaze_pipeline.py  gaze_processing.py  pitchyaw_pipeline.py
ObjectDetection/: __init__.py  detection.py  detection_pipeline.py  model_factory.py  object_detection.py
ObjectDetection/YOLO/: __init__.py  yolo_tracking.py  yoloe_folder.py
Phenomena/: __init__.py  helpers.py  phenomena_config.py  phenomena_pipeline.py  phenomena_tracking.py
Phenomena/Default/: __init__.py  attention_span.py  gaze_aversion.py  gaze_following.py  gaze_leadership.py  joint_attention.py  mutual_gaze.py  scanpath.py  social_referencing.py
Plugins/: __init__.py
Plugins/DataCollection/: __init__.py
Plugins/GazeTracking/: __init__.py
Plugins/ObjectDetection/: __init__.py
Plugins/Phenomena/: __init__.py
Plugins/TEMPLATE/: __init__.py  my_plugin.py
Projects/ExampleProject/: project.yaml
Projects/ExampleStudy/: README.md  project.yaml
configs/: KNOWN_GOOD.md  pipeline_known_good.yaml  pipeline_low_power.yaml
docs/: changelog.md  index.md
docs/concepts/: outputs.md  pipeline.md
docs/design/: visual-prompts.md
docs/developer/: architecture.md  data-collection-module.md  data-collection-plugin-tutorial.md  frame-context.md  gaze-plugin-tutorial.md  gaze-processing-module.md  index.md  object-detection-module.md  object-detection-plugin-tutorial.md  phenomena-engine.md  phenomena-plugin-tutorial.md  pipeline-yaml.md  plugin-system.md  plugin-tutorial.md  testing.md  writing-a-plugin.md
docs/getting-started/: cookbook.md  first-project.md  installation.md  quickstart-cli.md  quickstart-gui.md
docs/guides/: about-and-theming.md  analyze-footage.md  crop-and-adjust.md  inference-settings-and-tuning.md  projects-and-sessions.md  validation-and-testing.md  visual-prompts.md  where-things-live.md
docs/phenomena/: attention-span.md  gaze-aversion.md  gaze-following.md  gaze-leadership.md  index.md  joint-attention.md  mutual-gaze.md  scanpath.md  social-referencing.md
docs/reference/: cli-flags.md  config-dataclasses.md  detection-dataclass.md  frame-context-keys.md  index.md  inference-settings.md  keyboard-shortcuts.md  pipeline-yaml-schema.md  plugin-base-classes.md
docs/studies/: run-a-study-tutorial.md
docs/stylesheets/: mindsight.css
installer/: G-WIN-CHECKLIST.md  INSTALL-MACOS.md  INSTALL-WINDOWS.md  Install-MindSight.bat  Install-MindSight.command  RELEASE-CHECKLIST.md  build_release_zips.py  make_release_zip.py
mindsight/: __init__.py  cli.py  cli_flags.py  config.py  config_compat.py  constants.py  factory.py  gui.py  participant_ids.py  pipeline.py  pipeline_config.py  project_runner.py  resources.py  weights.py
mindsight/DataCollection/: __init__.py  chart_output.py  csv_output.py  dashboard_matplotlib.py  dashboard_output.py  data_pipeline.py  heatmap_output.py
mindsight/DepthEstimation/: __init__.py  depth_backend.py  depth_pipeline.py  midas_backend.py
mindsight/GUI/: about_tab.py  auto_crop.py  camera_enum.py  conditions_section.py  crop_dialog.py  csv_charts.py  data_pane.py  frame_extract_dialog.py  live_dashboard.py  live_dashboard_bridge.py  main_window.py  models_tab.py  path_picker.py  pipeline_dialog.py  plugin_panel.py  project_setup_panel.py  project_wizard.py  projects_tab.py  record_session_dialog.py  region_suggest.py  run_outputs.py  run_settings.py  run_study_tab.py  schema_panel.py  settings_manager.py  theming.py  ui_spec.py  update_check.py  validation_annotator.py  validation_autotune.py  validation_history.py  validation_wizard.py  validation_workbench.py  vp_archive.py  vp_builder_tab.py  vp_conditions_dialog.py  widgets.py  workers.py
mindsight/GazeTracking/: __init__.py  gaze_factory.py  gaze_pipeline.py  gaze_processing.py  (+1 more)
ms/: __init__.py  cli.py  cli_flags.py  config.py  config_compat.py  constants.py  gui.py  participant_ids.py  pipeline.py  pipeline_config.py  pipeline_loader.py  project_runner.py  weights.py
scripts/: capture_cli_parser_spec.py  download_weights.py  eval_annotate.py  eval_gaze.py  install_dependencies.py  sync_bundled_resources.py
tests/: conftest.py  test_about_tab.py  test_adas_gaze_backend.py  test_batch67_gui.py  test_blend_fp16.py  test_camera_enum.py  test_cli_flags.py  test_cli_parser_golden.py  test_close_guard.py  test_config_compat.py  test_config_equivalence.py  test_config_schema.py  test_constants_home.py  test_create_project.py  test_crop_landmarker.py  test_csv_output.py  test_cuda_support_note.py  test_data_collection_lifecycle.py  test_data_pane_and_theming.py  test_depth_scoring.py  test_detections_stream.py  test_eye_movement.py  test_face_detector_config.py  test_face_features.py  test_frame_context.py  test_gaze_factory_core.py  test_gaze_processing.py  test_geometry.py  test_global_csv.py  test_gui_namespace_census.py  test_gui_preset_seed.py  test_gui_smoke.py  test_heatmap_naming.py  test_identity_unification.py  test_inference_settings.py  test_iris_refine.py  test_known_good_config.py  test_ledger.py  test_live_sessions.py  test_menu_and_flags.py  (+59 more)
utils/: __init__.py  geometry.py
(+252 files in other folders)
