[project]
name = "mindsight"
version = "1.0.0.dev0"
description = "Real-time multi-person gaze tracking and attention analysis platform"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
authors = [{name = "MindSight Contributors"}]
keywords = ["gaze-tracking", "eye-tracking", "attention-analysis", "computer-vision"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

[project.urls]
Repository = "https://github.com/kylen-d/mindsight"
Issues = "https://github.com/kylen-d/mindsight/issues"
Changelog = "https://github.com/kylen-d/mindsight/blob/main/CHANGELOG.md"

[project.scripts]
mindsight = "mindsight.cli:main"
mindsight-gui = "mindsight.gui:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mindsight", "mindsight.*", "Plugins", "Plugins.*"]

[tool.black]
line-length = 99
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 99

[tool.ruff]
line-length = 99
target-version = "py310"
extend-exclude = [
    "mindsight/GazeTracking/Backends/MGaze/gaze-estimation",  # upstream third-party code
    "Plugins/GazeTracking/Gazelle/gazelle",  # upstream third-party code
]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",  # line too long (handled by formatter)
    "E701",  # multiple statements on one line (colon) -- used for compact guards
    "E702",  # multiple statements on one line (semicolon) -- used for compact init
    "E731",  # lambda assignment -- used for short callbacks
]

[tool.ruff.lint.per-file-ignores]
"mindsight/GazeTracking/Backends/MGaze/MGaze_Tracking.py" = ["E402"]
"mindsight/ObjectDetection/model_factory.py" = ["E402"]
"Plugins/GazeTracking/Gazelle/gazelle_backend.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: heavy integration tests that load real models / run full clips (deselect with -m 'not slow')",
]
