[project]
name = "mindsight"
version = "1.0.0"
description = "Real-time multi-person gaze tracking and attention analysis platform"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
authors = [{name = "MindSight Contributors"}]
keywords = ["gaze-tracking", "eye-tracking", "attention-analysis", "computer-vision"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    # Deep learning
    "torch==2.10.0",
    "torchvision==0.25.0",
    "onnxruntime==1.24.2",
    # Object detection
    "ultralytics==8.4.14",
    # Commit tarball, NOT git+: a VCS dep makes uv/pip shell out to a git
    # executable, which the one-click installers cannot assume (fresh Windows
    # lab boxes have no git; macOS prompts for Xcode CLT). Same pinned commit.
    "clip @ https://github.com/ultralytics/CLIP/archive/88ade288431a46233f1556d1e141901b3ef0a36b.tar.gz",
    # Gaze estimation
    "uniface==1.1.0",  # later releases return Face objects; the pipeline reads the dict face API validated in the golden regime
    "timm==1.0.25",
    "mediapipe==0.10.32",
    "scikit-learn>=1.0",  # Gaze-LLE backend imports sklearn.metrics via the vendored gazelle package
    # Computer vision
    "opencv-contrib-python==4.13.0.92",
    "Pillow==12.1.1",
    "imageio-ffmpeg>=0.5",  # bundled ffmpeg binary: crop tool + H.264 remux without PATH
    # GUI
    "PyQt6>=6.5",
    # Camera names in cv2's index order (cv2 sorts AVFoundation devices by
    # uniqueID; Qt/ffmpeg/system_profiler all enumerate differently)
    "pyobjc-framework-AVFoundation; sys_platform == 'darwin'",
    # Data & analysis
    "numpy>=1.24",
    "matplotlib>=3.7",
    "pandas>=2.0",
    # Utilities
    "PyYAML>=6.0",
    "pydantic>=2.5",
    "tqdm>=4.65",
]

[project.urls]
Repository = "https://github.com/kylen-d/mindsight"
Issues = "https://github.com/kylen-d/mindsight/issues"
Changelog = "https://github.com/kylen-d/mindsight/blob/main/CHANGELOG.md"

[project.scripts]
mindsight = "mindsight.cli:main"
mindsight-weights = "mindsight.weights:main"

[project.gui-scripts]
# gui-scripts so Windows generates a pythonw-based exe (no console window
# behind the GUI); identical to a console script on macOS/Linux.
mindsight-gui = "mindsight.gui:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mindsight", "mindsight.*", "Plugins", "Plugins.*"]

[tool.setuptools.package-data]
# Staged by scripts/sync_bundled_resources.py right before a release build;
# gitignored, absent in checkouts (mindsight/resources.py falls back cleanly).
mindsight = ["_bundled/**"]

[tool.uv]
# ultralytics and uniface pull opencv-python transitively; we pin
# opencv-contrib-python (an API-compatible superset providing the same cv2).
# With both in the lock, install order decides which cv2 lands on disk, and
# opencv-python 5.x shifts gaze-decode numerics off KNOWN_GOOD. The 'never'
# marker keeps opencv-python out of resolution so only contrib provides cv2.
override-dependencies = ["opencv-python; sys_platform == 'never'"]

[tool.black]
line-length = 99
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 99

[tool.ruff]
line-length = 99
target-version = "py310"
extend-exclude = [
    "mindsight/GazeTracking/Backends/MGaze/gaze-estimation",  # upstream third-party code
    "Plugins/GazeTracking/Gazelle/gazelle",  # upstream third-party code
]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",  # line too long (handled by formatter)
    "E701",  # multiple statements on one line (colon) -- used for compact guards
    "E702",  # multiple statements on one line (semicolon) -- used for compact init
    "E731",  # lambda assignment -- used for short callbacks
]

[tool.ruff.lint.per-file-ignores]
"mindsight/GazeTracking/Backends/MGaze/MGaze_Tracking.py" = ["E402"]
"mindsight/ObjectDetection/model_factory.py" = ["E402"]
"Plugins/GazeTracking/Gazelle/gazelle_backend.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: heavy integration tests that load real models / run full clips (deselect with -m 'not slow')",
]
